<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="top"
            xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/list_item_menuitem_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/location_image_placeholder"

        tools:layout_marginTop="5dp"
        android:padding="5dp"/>

        <TextView
            android:id="@+id/list_item_menuitem_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:text="@string/location_name_placeholder"
            />
        <TextView
            android:id="@+id/list_item_menuitem_sizes_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:text="@string/location_city_placeholder"
            />
        <TextView
            android:id="@+id/list_item_menuitem_prices_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:text="@string/location_state_placeholder"
            />

</LinearLayout>