<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:id="@+id/fragment_menu_detail"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <ImageView
        android:id="@+id/menu_detail_menuitem_imageview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/location_image_placeholder"
        android:layout_weight="0.55"
        tools:layout_marginTop="5dp"
        android:padding="5dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top|right">

        <TextView
            android:id="@+id/menu_detail_category_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="0.15"
            android:text="@string/location_name_placeholder"
            />
        <TextView
            android:id="@+id/menu_detail_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="0.15"
            android:text="@string/location_city_placeholder"
            />
        <TextView
            android:id="@+id/menu_detail_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="0.15"
            android:text="@string/location_state_placeholder"
            />
    </LinearLayout>
</LinearLayout>